The first triangle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,14 @@
-﻿cmake_minimum_required(VERSION 4.0)
+cmake_minimum_required(VERSION 3.31)
 project(GolaGameEngine)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 26)
+#set(CMAKE_EXE_LINKER_FLAGS "-static")
+set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 
 set(VK_SDK_DIR C:/VulkanSDK/1.4.313.2)
 set(GLFW_DIR ThirdParty/glfw-3.4)
 set(GLM_DIR ThirdParty/glm-1.0.2)
+set(VK_BOOTSTRAP_DIR ThirdParty/vk-bootstrap)
 
 add_executable(GolaGameEngine main.cpp
         Engine/Core/gola_device.cpp
@@ -13,7 +16,8 @@ add_executable(GolaGameEngine main.cpp
         Engine/Core/gola_pipeline.cpp
         Engine/Core/gola_swap_chain.cpp
         Engine/Window/gola_window.cpp
-        Engine/gola_app.cpp)
+        Engine/gola_app.cpp
+        Engine/Core/gola_renderer.cpp)
 
 find_library(GLFW_LIB
         NAMES glfw3dll glfw3
@@ -27,12 +31,17 @@ endif()
 
 include_directories(${VK_SDK_DIR}/Include
         ${GLFW_DIR}/include
-        ${GLM_DIR}/glm)
+        ${GLM_DIR}/glm
+        ${VK_BOOTSTRAP_DIR}/src)
 link_directories(${VK_SDK_DIR}/Lib
-        ${GLFW_DIR}/lib)
+        ${GLFW_DIR}/lib
+        ${VK_BOOTSTRAP_DIR}/build)
 target_link_libraries(GolaGameEngine
         ${GLFW_LIB}
-        ${VK_SDK_DIR}/Lib/vulkan-1.lib)
+        ${VK_SDK_DIR}/Lib/vulkan-1.lib
+        vk-bootstrap::vk-bootstrap)
+
+add_subdirectory(ThirdParty/vk-bootstrap)
 
 if(EXISTS "${CMAKE_SOURCE_DIR}/${GLFW_DIR}/lib/glfw3.dll")
     message(STATUS "GLFW DLL found: ${CMAKE_SOURCE_DIR}/${GLFW_DIR}/lib/glfw3.dll")
